{
  "version": 4,
  "terraform_version": "1.7.3",
  "serial": 13,
  "lineage": "6eee52aa-b115-9328-e7b7-f0afa643250c",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "res-3",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/90f4dd64-b8a4-40a8-898f-a777acc25b9a/resourceGroups/az-eastus/providers/Microsoft.Network/networkInterfaces/az-eus-winvm01805",
            "ip_configuration": [
              {
                "name": "ipconfig1",
                "primary": true,
                "private_ip_address": "10.0.0.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/90f4dd64-b8a4-40a8-898f-a777acc25b9a/resourceGroups/az-eastus/providers/Microsoft.Network/publicIPAddresses/Az-eus-winvm01-ip",
                "subnet_id": "/subscriptions/90f4dd64-b8a4-40a8-898f-a777acc25b9a/resourceGroups/az-eastus/providers/Microsoft.Network/virtualNetworks/Az-eus-vnet01/subnets/Prod"
              }
            ],
            "location": "eastus",
            "mac_address": "60-45-BD-D8-DF-33",
            "name": "az-eus-winvm01805",
            "private_ip_address": "10.0.0.4",
            "private_ip_addresses": [
              "10.0.0.4"
            ],
            "resource_group_name": "az-eastus",
            "tags": {
              "environment": "testing",
              "owner": "gautam",
              "purpose": "Virtual Machine deployment",
              "subscrition": "Aztechone"
            },
            "virtual_machine_id": "/subscriptions/90f4dd64-b8a4-40a8-898f-a777acc25b9a/resourceGroups/az-eastus/providers/Microsoft.Compute/virtualMachines/Az-eus-winvm01"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface_security_group_association",
      "name": "res-4",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/90f4dd64-b8a4-40a8-898f-a777acc25b9a/resourceGroups/az-eastus/providers/Microsoft.Network/networkInterfaces/az-eus-winvm01805|/subscriptions/90f4dd64-b8a4-40a8-898f-a777acc25b9a/resourceGroups/az-eastus/providers/Microsoft.Network/networkSecurityGroups/Az-eus-nsg-01",
            "network_interface_id": "/subscriptions/90f4dd64-b8a4-40a8-898f-a777acc25b9a/resourceGroups/az-eastus/providers/Microsoft.Network/networkInterfaces/az-eus-winvm01805",
            "network_security_group_id": "/subscriptions/90f4dd64-b8a4-40a8-898f-a777acc25b9a/resourceGroups/az-eastus/providers/Microsoft.Network/networkSecurityGroups/Az-eus-nsg-01"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "res-5",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/90f4dd64-b8a4-40a8-898f-a777acc25b9a/resourceGroups/az-eastus/providers/Microsoft.Network/networkSecurityGroups/Az-eus-nsg-01",
            "location": "eastus",
            "name": "Az-eus-nsg-01",
            "resource_group_name": "az-eastus",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "3389",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "RDP",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "res-6",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "3389",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/90f4dd64-b8a4-40a8-898f-a777acc25b9a/resourceGroups/az-eastus/providers/Microsoft.Network/networkSecurityGroups/Az-eus-nsg-01/securityRules/RDP",
            "name": "RDP",
            "network_security_group_name": "Az-eus-nsg-01",
            "priority": 100,
            "protocol": "Tcp",
            "resource_group_name": "az-eastus",
            "source_address_prefix": "*",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "res-7",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/90f4dd64-b8a4-40a8-898f-a777acc25b9a/resourceGroups/az-eastus/providers/Microsoft.Network/publicIPAddresses/Az-eus-winvm01-ip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "52.168.135.55",
            "ip_version": "IPv4",
            "location": "eastus",
            "name": "Az-eus-winvm01-ip",
            "resource_group_name": "az-eastus",
            "sku": "Standard",
            "sku_tier": "Regional",
            "tags": {
              "environment": "testing",
              "owner": "gautam",
              "purpose": "Virtual Machine deployment",
              "subscrition": "Aztechone"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "res-10",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.0.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/90f4dd64-b8a4-40a8-898f-a777acc25b9a/resourceGroups/az-eastus/providers/Microsoft.Network/virtualNetworks/Az-eus-vnet01/subnets/Prod",
            "name": "Prod",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "az-eastus",
            "virtual_network_name": "Az-eus-vnet01"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "res-9",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.1.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/90f4dd64-b8a4-40a8-898f-a777acc25b9a/resourceGroups/az-eastus/providers/Microsoft.Network/virtualNetworks/Az-eus-vnet01/subnets/Dev",
            "name": "Dev",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "az-eastus",
            "virtual_network_name": "Az-eus-vnet01"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "res-8",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "19c86c22-42e1-467b-a0f8-31f4cc8fcde8",
            "id": "/subscriptions/90f4dd64-b8a4-40a8-898f-a777acc25b9a/resourceGroups/az-eastus/providers/Microsoft.Network/virtualNetworks/Az-eus-vnet01",
            "location": "eastus",
            "name": "Az-eus-vnet01",
            "resource_group_name": "az-eastus",
            "subnet": [
              {
                "address_prefix": "10.0.0.0/24",
                "id": "/subscriptions/90f4dd64-b8a4-40a8-898f-a777acc25b9a/resourceGroups/az-eastus/providers/Microsoft.Network/virtualNetworks/Az-eus-vnet01/subnets/Prod",
                "name": "Prod"
              },
              {
                "address_prefix": "10.0.1.0/24",
                "id": "/subscriptions/90f4dd64-b8a4-40a8-898f-a777acc25b9a/resourceGroups/az-eastus/providers/Microsoft.Network/virtualNetworks/Az-eus-vnet01/subnets/Dev",
                "name": "Dev"
              }
            ]
          }
        }
      ]
    }
  ]
}